# prvolt_test

./: .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
config/: db.sqlite3  urls.py
config/settings/: base.py  test.py
pokemon/: service.py  urls.py  views.py
pokemon/serializers/: core.py  list.py
