[project]
name = "prvolt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.28.0",
    "drf-spectacular-sidecar>=2025.8.1",
    "httpx>=0.27.0",
    "django-cors-headers>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.1",
    "pydantic>=2.11.7",
    "django-stubs>=5.0.0",
    "djangorestframework-stubs>=3.14.0",
    "wemake-python-styleguide>=1.3.0",
    "ruff>=0.12.9",
]
